--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ a:hover {
 #nav-main #main-menu a {
 	padding: 7px 5px 7px 8px;
 }
-#nav-main #main-menu a a:hover, #nav-main #main-menu a .active, #main #home  {
+#nav-main #main-menu a:hover, #nav-main #main-menu a.active, #main #home  {
 	background: url(images/hover.jpg) repeat-y left top;
 }
 .contextual-links-wrapper a:link {
